--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ google_site_verification: # fill in to your verification string
 # The end of `jekyll-seo-tag` settings
 
 google_analytics:
-  id: # fill in your Google Analytics ID
+  id: G-SWR7DP6B6F
 
 goatcounter:
   id: # fill in your Goatcounter ID
